@startuml anibase
hide methods
hide stereotypes

entity anime {
  * id : int <<PK>>
  --
  title : varchar
  episodes : int
  image : text
}

entity genre {
  * id : int <<PK>>
  name : varchar
}

entity episode {
  * id : int <<PK>>
  anime_id : int <<FK>>
  number : int
}

entity review {
  * id : int <<PK>>
  anime_id : int <<FK>>
  comment : text
}

entity ranking {
  * id : int <<PK>>
  anime_id : int <<FK>>
  position : int
  score : decimal
}

entity season {
  * id : int <<PK>>
  anime_id : int <<FK>>
  name : varchar
}

entity status {
  * id : int <<PK>>
  anime_id : int <<FK>>
  state : varchar
}

entity tag {
  * id : int <<PK>>
  anime_id : int <<FK>>
  name : varchar
}

entity platform {
  * id : int <<PK>>
  anime_id : int <<FK>>
  name : varchar
}

entity anime_genre {
  * anime_id : int <<PK,FK>>
  * genre_id : int <<PK,FK>>
}

anime ||--o{ episode
anime ||--o{ review
anime ||--o{ ranking
anime ||--o{ season
anime ||--o{ status
anime ||--o{ tag
anime ||--o{ platform

anime ||--o{ anime_genre
genre ||--o{ anime_genre

@enduml